@@ -23,6 +23,7 @@
 
 #include "luxrays/utils/safesave.h"
 #include "luxrays/utils/fileext.h"
+#include "luxrays/utils/strutils.h"
 
 using namespace std;
 using namespace luxrays;
