@@ -42,6 +42,7 @@
 * Fixed scale problem in GPU code for brick texture HERRINGBONE and BASKET (issue #438)
 * Fixed a possible crash when using trilinear texture with GPUs
 * Reworked some condition in hybrid rendering light tracing to solve the problem of flashing caustics (issue #441)
+* Fixed a problem with Blender Translation language preference option and scene export on file
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
